# falacomigo

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src/components/: Board.tsx  CategorizedBoard.tsx  Jogos.tsx  JogosMatematica.tsx  PhraseBar.tsx  RotinaDiaria.tsx  Sidebar.tsx  SymbolButton.tsx
src/components/games/: Categorize.tsx  CauseEffect.tsx  GameHeader.tsx  Matching.tsx  Memory.tsx  Sequence.tsx  shared.ts
src/components/games/math/: Compare.tsx  Counting.tsx  NumberMatch.tsx  NumberSequence.tsx  Shapes.tsx  shared.ts
src/data/: boardComunicacao3.ts  boards.ts  rotinaDiaria.ts
src/hooks/: useTTS.ts
